Change book style vew

--- a/app/views/layouts/_postulationheader.html.erb
+++ b/app/views/layouts/_postulationheader.html.erb
@@ -1,4 +1,4 @@
-<header class="navbar navbar-fixed-top navbar-default">
+<header class="navbar navbar-fixed-top navbar-default" style="background-color:transparent;">
   <div class="container">
     <a class="navbar-brand" href=<%=root_path %>>
     <%= image_tag("logo.png", alt: "Imagen del Curso", size:"120x24") %>
