--- a/app/views/postulations/_form.html.erb
+++ b/app/views/postulations/_form.html.erb
@@ -30,7 +30,7 @@
       <label class="radio-label"><%= f.radio_button :owner, :value => true, class: 'radio-post'%> Soy propietario y conductor.<label>
   </div>
   <div class="radio">
-       <label class="radio-label"><%= f.radio_button :owner, :value => false%> Soy propietario y tengo varias unidades</label>
+       <label class="radio-label"><%= f.radio_button :owner, :value => false%> Soy propietario y tengo varias unidades.</label>
   </div>
 
   <div class="form-group">
