--- a/app/views/static_pages/book.html.erb
+++ b/app/views/static_pages/book.html.erb
@@ -10,16 +10,16 @@
 
     <div class="book-data">
     	Datos de la persona que presenta el reclamo <br>
-    	<select style="margin-top:20px;">
+    	<select style="margin-top:20px;width:250px; margin-bottom: -2px;">
     		<option>Tipo de Documento</option>
     		<option>DNI</option>
     		<option>Carnet de Extranjería</option>
     	</select><br>
-    	<input type="text" value="Número de Documento" style="color:gray;">
-    	<input type="text" value="Nombres" style="color:gray;">
-    	<input type="text" value="Apellido Paterno" style="color:gray;">
-    	<input type="text" value="Apellido Materno" style="color:gray;">
-    	<input type="text" value="Email" style="color:gray;">
+    	<input type="text" value="Número de Documento" style="color:gray;width:250px;">
+    	<input type="text" value="Nombres" style="color:gray;width:250px;">
+    	<input type="text" value="Apellido Paterno" style="color:gray;width:250px;">
+    	<input type="text" value="Apellido Materno" style="color:gray;width:250px;">
+    	<input type="text" value="Email" style="color:gray;width:250px;">
 
     	La respuesta llegará al correo electrónico que nos proporcione.
     </div>
@@ -34,6 +34,7 @@
     	</textarea><br><br>
     	<input type="button" value="Enviar">
     </div>
+    
     
 
 </div>
