--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -189,11 +189,11 @@
     var animation_begin_pos = 0; //where you want the animation to begin
     var animation_end_pos = 5000; //where you want the animation to stop
     
-    var tamDiv=$(window).height()+15;
+    var tamDiv=$(window).height()-15;
     $(document).scroll(function() {
         scroll_pos = $(this).scrollTop(); 
 
-        factor=tamDiv/screen.height;
+        
         //we want to calculate the relevant transitional rgb value
             if(scroll_pos >= 0 && scroll_pos < 2*(tamDiv)){
             	document.getElementById('login').style.backgroundColor = "#d7006e";
