--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -478,6 +478,31 @@ fieldset{
   margin-top:20px;
 }
 
+.poli-text{
+  margin-left:5%;
+  margin-top:50px;
+  text-align:left;
+  display:inline-block;
+  width: 50%;
+  height: 30%;
+  max-width: 200%;
+  float:left;
+  top:0;bottom:0;
+  left:0;right:0;
+  font-size: 1.4em;
+  font-family: 'CaviarDreams';
+  p{
+      font-family: 'CaviarDreams'; 
+      font-size: 17px; 
+      width:80%; 
+      margin-left: auto;
+      margin-right: auto;
+      margin-top:20px;
+  }
+}
+
+
+
 .cont-text {
 margin-top:230px;
     display:inline-block;
