Change book view style

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -464,7 +464,7 @@ fieldset{
 }
 .book-desc{
   margin-top:35px;
-  width:100vw;
+  margin-left:30px;
   font-family: 'CaviarDreams';
   font-size: 17px; 
 }
@@ -476,6 +476,7 @@ fieldset{
   font-family: 'CaviarDreams';
   font-size: 17px; 
   margin-top:20px;
+  margin-left:30px;
 }
 
 .poli-text{
