Change landing pages style

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -20,7 +20,7 @@
 
 		</li>
 		<p class="page-slogan bar fadeInUp" style="margin-top:20px;">
-			Próximamente en App Store
+			Próximamente en App Store y en Play Store
 		</p>
     	
 	</div>
@@ -40,11 +40,11 @@
     								var index  = Math.floor(Math.random()*2)+1;
     								if (index == 1){
     									
-    									iframe.src = "https://www.youtube.com/embed/DySEpoj6u74";
+    									iframe.src = "https://www.youtube.com/embed/DySEpoj6u74?&loop=1&playlist=DySEpoj6u74";
     								}
     								else if(index == 2){
     									
-    									iframe.src = "https://www.youtube.com/embed/fMh2WDqBia0";
+    									iframe.src = "https://www.youtube.com/embed/fMh2WDqBia0?&loop=1&playlist=fMh2WDqBia0";
     								}
 								};
                             </script>
@@ -142,12 +142,12 @@
 <div class="contact"  id="contact">
 	<div class="cont-bkgr">
 		<div class="cont-text" style="margin-left:5%;">
-			<u style="font-size:1.5em;">Contacto </u><br>
-			<p>Escríbenos a <b>contacto@movivan.pe</b> y con gusto nos contactaremos contigo a la brevedad.</p>
+			<u style="font-size:1.5em;">Contacto</u><br>
+			<p>Escríbenos a <b>contacto@movivan.pe</b> <br>y con gusto nos contactaremos contigo <br>a la brevedad.</p>
 		</div>
 		<div class="cont-text" style="margin-left:-13%;">
-			<u style="font-size:1.5em;">Carreras </u><br>
-			<p style="width:50%;">En Movivan nos mueve la pasión por la tecnología y la innovación y estamos en busca de talentos como tú para diversas disciplinas.<br>
+			<u style="font-size:1.5em;">Carreras</u><br>
+			<p style="width:50%;">En Movivan nos mueve la pasión por <br>la tecnología y la innovación y estamos en busca de talentos como tú para diversas disciplinas.<br>
 				Escríbenos a <b>carreras@movivan.pe</b></p>
 		</div>
 	</div>
