--- a/app/views/static_pages/politics.html.erb
+++ b/app/views/static_pages/politics.html.erb
@@ -3,7 +3,7 @@
 	<li class="li-head" style="margin-top:-4px;margin-left:30px;">
         <%= link_to image_tag("logo.png", alt: "Imagen del Curso", size:"200x40"), "#video"%>
     </li>
-    <div class="book-desc" style="text-align:center;">
+    <div class="book-desc" style="text-align:center;width:100vw;margin-left:0;">
         <u><b style="font-size:1.5em;">POLITICA DE PRIVACIDAD Y PROTECCIÓN DE DATOS PERSONALES </b></u><br>
 
     </div>
