--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -24,10 +24,10 @@
         }
       </style>
         <ul id="menu" style="width:100vw;color:#00BD00;text-align:center;margin-left:-500px;font-size:16px;">
-           <li style="padding-right: 100px;">Términos y condiciones de servicios</li>
+           <li style="padding-right: 60px;">Términos y Condiciones de Servicios</li>
            
-           <li style="border-right:solid 1px #00BD00;border-left: solid 1px #00BD00;padding-right: 100px;    padding-left: 100px;">
-            <a href="/politics" style="color:#00BD00;">Políticas de privacidad</a>
+           <li style="border-right:solid 1px #00BD00;border-left: solid 1px #00BD00;padding-right: 100px;    padding-left: 95px;">
+            <a href="/politics" style="color:#00BD00;">Política de Privacidad</a>
            </li>
            <li style="margin-left:80px;">
             <a href="/book" style="color:#00BD00;">Libro de Reclamaciones</a><br>
