Add cellphone images

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -326,7 +326,7 @@ fieldset{
 
 .how-bkgr{
   width: 45vw;
-  background-image: image-url('iPhone.png');
+  background-image: image-url('viaje.png');
   background-size: 100% 100%;
   height: 80vh;
   max-height: 90vw;
@@ -342,7 +342,7 @@ fieldset{
 
 .how1-bkgr{
   width: 45vw;
-  background-image: image-url('iPhone.png');
+  background-image: image-url('programacion.png');
   background-size: 100% 100%;
   height: 80vh;
   max-height: 90vw;
@@ -358,7 +358,7 @@ fieldset{
 
 .how2-bkgr{
   width: 45vw;
-  background-image: image-url('iPhone.png');
+  background-image: image-url('confirmacion.png');
   background-size: 100% 100%;
   height: 80vh;
   max-height: 90vw;
@@ -374,7 +374,7 @@ fieldset{
 
 .how3-bkgr{
   width: 45vw;
-  background-image: image-url('iPhone.png');
+  background-image: image-url('misviajes.png');
   background-size: 100% 100%;
   height: 80vh;
   max-height: 90vw;
