fixed header and stores img

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,7 @@
     <nav>
       <!-- #ebebe0-->
       <ul class="nav navbar-nav navbar-right">
-      <li class="li-head" style="margin-top:-4px;">
+      <li class="li-head" style="margin-top:-4px;right:22px;">
         <%= link_to image_tag("logo.png", alt: "Imagen del Curso", size:"120x24"), "#video"%>
       </li>
        <li class="li-head" style="top:4px;" id="what">
