--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -186,6 +186,17 @@ fieldset{
   margin-left: auto;
 }
 
+.img-store{
+  margin-top:-7%;
+  
+  position:absolute;
+  opacity:0.7;
+  left: 0;
+  right: 0;
+  margin-right: auto;
+  margin-left: auto; 
+}
+
 .img-name{
  margin-top:-35%;
   
@@ -322,6 +333,7 @@ fieldset{
   width:50%;
   height:100%;
   position: relative;
+  margin-left:2%;
 }
 
 .how-bkgr{
@@ -625,7 +637,7 @@ a:visited {
   color:white;
 }
 .navbar-inverse .navbar-nav > #login >a:hover{
-  color:white;
+  color:gray;
 }
 
 .navbar-inverse .navbar-nav > #login >a{
@@ -641,12 +653,14 @@ a:visited {
   color:white;
 }
 .navbar-inverse .navbar-nav > #sign >a:hover{
+  color:gray;
+}
+
+.navbar-inverse .navbar-nav > #sign >a{
   color:white;
 }
 
-.navbar-inverse .navbar-nav > #sign >a:visited{
-  color:white;
-}
+
 
 
 .navbar ul{
