--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,6 +7,7 @@
 		<%= video_tag "Movivan.webm" , :autoplay => true, :muted => true, :loop => true, class:"fullscreen-bg__video" %>
 		<%= image_tag("lam.png", alt: "Imagen de noticia",:class => "img-main bar fadeInUp", size:"213x123")%>
 		<%= image_tag("movivan.png", alt: "Imagen de noticia",:class => "img-name bar fadeInUp", size:"232x42")%>
+		<%= image_tag("stores.png",:class => "img-store bar fadeInUp", size:"213x80")%>
 		<p class="page-slogan bar fadeInUp">
 			Una nueva experiencia en tu viaje cotidiano: <br>
 			confortable, seguro y accesible
@@ -20,7 +21,7 @@
 
 		</li>
 		<p class="page-slogan bar fadeInUp" style="margin-top:20px;">
-			Próximamente en App Store y en Play Store
+			Próximamente
 		</p>
     	
 	</div>
