changed footer and change book

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -84,7 +84,7 @@
 		</div>
 		<div class="how-text bar fadeInUp">
 			<h1>1. Viaje</h1>
-			<h2>Selecciona tus rutas de ida y vuelta segun tus viajes.</h2>
+			<h2>Selecciona el origen, el destino y la hora de recojo de tu viaje.</h2>
 		</div>
 	</div>
 </div>
@@ -110,7 +110,7 @@
 		</div>
 		<div class="how-text bar fadeInUp">
 			<h1>3. Confirmación</h1>
-			<h2>Espera la confirmación de tus viajes programados.</h2>
+			<h2>Espera la confirmación de tus viajes.</h2>
 		</div>
 	</div>
 </div>
@@ -144,11 +144,11 @@
 	<div class="cont-bkgr">
 		<div class="cont-text" style="margin-left:5%;">
 			<u style="font-size:1.5em;">Contacto</u><br>
-			<p>Escríbenos a <b>contacto@movivan.pe</b> <br>y con gusto nos contactaremos contigo <br>a la brevedad.</p>
+			<p>Escríbenos a <br><b>contacto@movivan.pe</b> y con gusto nos contactaremos contigo <br>a la brevedad.</p>
 		</div>
 		<div class="cont-text" style="margin-left:-13%;">
 			<u style="font-size:1.5em;">Carreras</u><br>
-			<p style="width:50%;">En Movivan nos mueve la pasión por <br>la tecnología y la innovación y estamos en busca de talentos como tú para diversas disciplinas.<br>
+			<p style="width:50%;">En Movivan nos mueve la pasión por <br>la tecnología e innovación y buscamos<br> talentos como tú para diversas disciplinas.<br>
 				Escríbenos a <b>carreras@movivan.pe</b></p>
 		</div>
 	</div>
