Reclamation book mailer

--- a/app/views/book_mailer/get_book.html.erb
+++ b/app/views/book_mailer/get_book.html.erb
@@ -2,7 +2,7 @@ Datos del Contacto:
 <br></br><br></br>
 Nombre: <%=@book.name%>
 <br></br> 
-Apellidos: <%=@book.lastName%>
+Apellidos: <%=@book.lastname%>
 <br></br> 
 Correo: <%=@book.email%>
 <br></br> 
