--- a/app/views/static_pages/book.html.erb
+++ b/app/views/static_pages/book.html.erb
@@ -1,46 +1,7 @@
 <% provide(:title, 'Reclamaciones') %>
 <div class="book-row">
-	<li class="li-head" style="margin-top:-4px;margin-left:30px;">
-        <%= link_to image_tag("logo.png", alt: "Imagen del Curso", size:"200x40"), "#video"%>
-    </li>
-    <div class="book-desc">
-    	<b>Libro de Reclamaciones (Ley 29571)</b> <br><br>
-    	Conforme a lo establecido en el Código de Protección y Defensa del Consumidor, la página web de Movivan cuenta con un Libro de Reclamaciones a su disposición. Ingrese a la opción que sea de su interés para registras su queja o reclamo.
-    </div>
-
-    <div class="book-data">
-      Datos de la persona que presenta el reclamo <br>
-      <select style="margin-top:20px;width:250px; margin-bottom: -2px;">
-        <option>Tipo de Documento</option>
-        <option value="1">DNI</option>
-        <option value="2">Carnet de Extranjería</option>
-      </select><br>
-      <input type="text" value="Número de Documento" id="numDoc" style="color:gray;width:250px;">
-      <input type="text" value="Nombres" id="name" style="color:gray;width:250px;">
-      <input type="text" value="Apellido Paterno" id="apPat" style="color:gray;width:250px;">
-      <input type="text" value="Apellido Materno" id="apMat" style="color:gray;width:250px;">
-      <input type="text" value="Email" id="email" style="color:gray;width:250px;">
-
-      La respuesta llegará al correo electrónico que nos proporcione.
-    </div>
-
-    <div class="book-data" style="margin-left:-30px;">
-      <b>Tipo de Reclamación </b><br><br>
-      <input type="radio" value="reclamo" style="display:inline;" class="radio-post">Reclamo <br><br>
-      <input type="radio" value="queja" style="display:inline;" class="radio-post">Queja <br><br>
-
-      Detalle del Reclamo (Max: 500 caracteres)
-      <textarea rows="8" cols="70" id="myText">
-      </textarea><br><br>
-      <input type="button" value="Enviar" onclick="sendEmail()">
-    </div>
+    <%= render '/books/form' %>
 </div>
-
-<script >
-$('.radio-post').click(function() {
-    $(this).siblings('input:radio').prop('checked', false);
-});
-</script>
 
 
 
