--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -77,7 +77,7 @@
 </div>
 
 <div class="how section" id="how">
-	<div class="row main">
+	<div class="row main" style="background:white;">
 		<div class="how-main bar fadeInUp" >
 			<div class="how-bkgr">
 			</div>
@@ -90,8 +90,8 @@
 </div>
 
 <div class="how section">
-	<div class="row main">
-		<div class="how-main bar fadeInUp" >
+	<div class="row main" style="background:white;">
+		<div class="how-main bar fadeInUp" style="background:white;" >
 			<section class="how1-bkgr">
 			</section>
 		</div>
@@ -103,31 +103,17 @@
 </div>
 
 <div class="how section">
-	<div class="row main">
+	<div class="row main" style="background:white;">
 		<div class="how-main bar fadeInUp" >
 			<div class="how2-bkgr">
 			</div>
 		</div>
 		<div class="how-text bar fadeInUp">
-			<h1>3. Confirmación</h1>
-			<h2>Espera la confirmación de tus viajes.</h2>
+			<h1>3. Espera la confirmación</h1>
+			<h2>Cuando encontremos un grupo de viaje para ti, te notificaremos.</h2>
 		</div>
 	</div>
 </div>
-
-<div class="how section">
-	<div class="row main">
-		<div class="how-main bar fadeInUp" >
-			<div class="how3-bkgr">
-			</div>
-		</div>
-		<div class="how-text bar fadeInUp">
-			<h1>4. Mis viajes</h1>
-			<h2>Disfruta de tus viajes confirmados.</h2>
-		</div>
-	</div>
-</div>
-
 
 <div class="benefic section" id="benefic">
 	<div class="row main">
