--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -338,11 +338,11 @@ fieldset{
 
 .how-bkgr{
   width: 45vw;
-  background-image: image-url('viaje.png');
+  background-image: image-url('vista1.png');
   background-size: 100% 100%;
-  height: 80vh;
+  height: 53vh;
   max-height: 90vw;
-  max-width: 45vh;
+  max-width: 100vh;
   margin-top:auto;
   margin-bottom:auto;
   margin-right:50px;
@@ -354,11 +354,11 @@ fieldset{
 
 .how1-bkgr{
   width: 45vw;
-  background-image: image-url('programacion.png');
+  background-image: image-url('vista2.png');
   background-size: 100% 100%;
-  height: 80vh;
+  height: 53vh;
   max-height: 90vw;
-  max-width: 45vh;
+  max-width: 100vh;
   margin-top:auto;
   margin-bottom:auto;
   margin-right:50px;
@@ -370,11 +370,11 @@ fieldset{
 
 .how2-bkgr{
   width: 45vw;
-  background-image: image-url('confirmacion.png');
+  background-image: image-url('vista3.png');
   background-size: 100% 100%;
-  height: 80vh;
+  height: 53vh;
   max-height: 90vw;
-  max-width: 45vh;
+  max-width: 100vh;
   margin-top:auto;
   margin-bottom:auto;
   margin-right:50px;
