Change how images

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -337,8 +337,8 @@ fieldset{
 }
 
 .how-bkgr{
-  width: 45vw;
-  background-image: image-url('vista1.png');
+  width: 92vw;
+  background-image: image-url('step1.png');
   background-size: 100% 100%;
   height: 53vh;
   max-height: 90vw;
@@ -353,32 +353,32 @@ fieldset{
 }
 
 .how1-bkgr{
-  width: 45vw;
-  background-image: image-url('vista2.png');
+  width: 100vw;
+  background-image: image-url('step2.png');
   background-size: 100% 100%;
-  height: 53vh;
+  height: 73vh;
   max-height: 90vw;
   max-width: 100vh;
   margin-top:auto;
   margin-bottom:auto;
   margin-right:50px;
-  margin-left:auto;
+  
   position: absolute;
   top:0;bottom:0;
   left:0;right:0;
 }
 
 .how2-bkgr{
-  width: 45vw;
-  background-image: image-url('vista3.png');
+  width: 100vw;
+  background-image: image-url('step3.png');
   background-size: 100% 100%;
-  height: 53vh;
+  height: 73vh;
   max-height: 90vw;
   max-width: 100vh;
   margin-top:auto;
   margin-bottom:auto;
   margin-right:50px;
-  margin-left:auto;
+  
   position: absolute;
   top:0;bottom:0;
   left:0;right:0;
