Change how image

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -345,7 +345,7 @@ fieldset{
   max-width: 100vh;
   margin-top:auto;
   margin-bottom:auto;
-  margin-right:50px;
+  margin-right:auto;
   margin-left:auto;
   position: absolute;
   top:0;bottom:0;
